# circuit-tracer

./: .gitignore  README.md  index.html  prettier.config.js  pyproject.toml
circuit_tracer/: __init__.py  __main__.py  attribution.py  graph.py  replacement_model.py
circuit_tracer/configs/: README.md  gemmascope-l0-0.yaml  gemmascope-l0-1.yaml  gemmascope-l0-2.yaml  llama-relu.yaml
circuit_tracer/frontend/: feature_models.py  graph_models.py  local_server.py  utils.py
circuit_tracer/frontend/assets/: README.md  feature-view.html  index.html  util.js
circuit_tracer/frontend/assets/attribution_graph/: cg.css  init-cg-feature-detail.js  init-cg-link-graph.js  init-cg-subgraph.js  init-cg.js  render-act-histogram.js  util-cg.js
circuit_tracer/frontend/assets/feature_examples/: init-feature-examples-list.js  init-feature-examples.js
circuit_tracer/transcoder/: __init__.py  activation_functions.py  single_layer_transcoder.py
circuit_tracer/utils/: __init__.py  create_graph_files.py  disk_offload.py  hf_utils.py
demos/: attribute_demo.ipynb  circuit_tracing_tutorial.ipynb  gemma_demo.ipynb  gemma_it_demo.ipynb  graph_visualization.py  intervention_demo.ipynb  llama_demo.ipynb  utils.py
tests/: test_attributions_gemma.py  test_attributions_llama.py  test_graph.py
