[project]
name = "circuit-tracer"
version = "0.1.0"
description = "Library for circuit tracing in language models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "einops>=0.8.0",
    "huggingface_hub>=0.26.0",
    "numpy>=2.0.0",
    "pydantic>=2.0.0",
    "pytest>=8.0.0",
    "safetensors>=0.5.0",
    "tokenizers>=0.21.0",
    "torch>=2.0.0",
    "tqdm>=4.60.0",
    "transformer-lens>=v2.15.4",
    "transformers>=4.50.0",
]

[project.scripts]
circuit-tracer = "circuit_tracer.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
